# nextjs-rust

./: .env.example  .gitignore  Cargo.toml  README.md  package.json
src/app/: layout.tsx  page.tsx
src/backend/: main.rs
src/backend/handlers/: register.rs
src/backend/routes/: version.rs
src/backend/services/: server.rs
src/backend/utils/: cors.rs  env.rs  local_ip.rs  log.rs  mod.rs
